[gd_scene load_steps=2 format=3 uid="uid://cy8gu3pul06d2"]

[ext_resource type="Script" path="res://ui/title_screen/title_screen.gd" id="1_7xoij"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7xoij")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.0
offset_top = 21.0
offset_right = 107.0
offset_bottom = 272.0
grow_horizontal = 2
grow_vertical = 2

[node name="Start" type="Button" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 51
text = "开始游戏"

[node name="Setting" type="Button" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 51
text = "设置"

[node name="Quit" type="Button" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 51
text = "退出"

[node name="Label" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -406.0
offset_top = -362.0
offset_right = 398.0
offset_bottom = -79.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 201
text = "阴阳怪棋
"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="TextureRect/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/Setting" to="." method="_on_setting_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
